Revert "降低了老年代的GC次数 (#3)"
This reverts commit eb6cb2e3ed528003059139a8dd09ba21da69ff20.